vcs/specs/parser/fail/proofs/invalid_tactic.vr
// @test: parse-fail
// @level: L0
// @tags: parser, proofs, tactic, error
// @description: Test malformed tactic declaration
// @expected-error: E028

tactic my_tactic(
}
